# C.C

./: README.md  requirements1.txt  requirements2.txt
ros2/test/: README.md
test/: open_port.sh  run_motor.sh  set_env.sh
test/CC_application/: settings.gradle
test/CC_application/app/: build.gradle
test/CC_application/app/src/main/: AndroidManifest.xml
test/CC_application/gradle/wrapper/: gradle-wrapper.properties
test/DrivingControl/Broom/: README.md
test/DrivingControl/Motor/: README.md  test_compass.py  test_pins.py  test_prox.py
test/DrivingControl/Motor/motorControl/: Motor.py  MotorControl.py  Proximity.py  test+mag+prox.py  test.py  test_compass.py
test/DrivingControl/install/: local_setup.sh  setup.sh
test/DrivingControl/log/: latest_build
test/DrivingControl/motor_ws/install/: local_setup.sh  setup.sh
test/DrivingControl/motor_ws/log/: latest_build
test/DrivingControl/motor_ws/src/motor_pubsub/: setup.py
test/DrivingControl/motor_ws/src/motor_ws/: CMakeLists.txt  package.xml
test/DrivingControl/src/motor/: package.xml  setup.py
test/DrivingControl/src/motor/motor/: subscriber_motor_function.py  test_gps.py  test_pins.py  test_prox.py  test_prox2.py
test/MotorControl/Broom/: README.md
test/MotorControl/Driving/: README.md
test/PathSetting/path_info/: coordinates.json  on_going.json
test/PathSetting/path_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
test/PathSetting/path_ws/log/: latest_build
test/PathSetting/path_ws/src/path_package/: .setup.py.swp  package.xml  setup.cfg  setup.py
test/ROS2/: HelloROS2.py  README.md  miniaml_node1.py
test/RobotVision/install/: local_setup.sh  setup.sh  setup.zsh
test/RobotVision/log/: latest_build
test/RobotVision/obstacles_detection/install/: local_setup.sh  setup.sh
test/RobotVision/obstacles_detection/log/: latest_build
test/RobotVision/obstacles_detection/src/interfaces/: .CMakeLists.txt.swp  CMakeLists.txt
test/RobotVision/ros2_ws/install/: local_setup.sh  setup.sh
test/RobotVision/ros2_ws/log/: latest_build  latest_test
test/RobotVision/ros2_ws/src/proximity_sensor_pubsub/: package.xml  setup.cfg  setup.py
test/RobotVision/ros2_ws/src/proximity_sensor_pubsub/proximity_sensor_pubsub/: proximity_dst_pub.py
test/RobotVision/ros2_ws/src/proximity_sensor_pubsub/proximity_sensor_pubsub/install/: local_setup.sh  setup.sh
test/RobotVision/ros2_ws/src/proximity_sensor_pubsub/proximity_sensor_pubsub/log/: latest_build
test/RobotVision/rplidar_detection/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
test/RobotVision/rplidar_detection/log/: latest_build
test/RobotVision/rplidar_detection/src/rplidar_detection/: CMakeLists.txt  package.xml
test/RobotVision/rplidar_detection/src/rplidar_detection/src/: rplidar_scan.py
test/RobotVision/rplidar_ros2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
test/RobotVision/rplidar_ros2/log/: latest_build
test/RobotVision/src/interfaces/: CMakeLists.txt
test/RobotVision/src/motor_pubsub/: package.xml  setup.py
test/RobotVision/src/obstacles_detection/: setup.py
test/ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
test/ros2_ws/log/: latest_build
test/ros2_ws/src/camera/: package.xml  setup.py
test/ros2_ws/src/interfaces/: CMakeLists.txt
test/ros2_ws/src/motor/: package.xml  setup.py
test/ros2_ws/src/motor/motor/: .motor_control.py.swp  .publisher_motor_function.py.swp  ;:;d:asdf:AdF:  gps_tracking.py  motor_test.py  path_info.json  proximity.py  publisher_motor_function.py  subscriber_motor_function.py
test/ros2_ws/src/obstacles_detection/: package.xml  setup.cfg  setup.py
test/ros2_ws/src/obstacles_detection/obstacles_detection/: .yolov7.py.swp  obstacles_detect_node.py  yolov7.py  yolov7_2.py
(+204 files in other folders)
