<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>obstacles_detection</name>
  <version>1.0.0</version>
  <description>For obstacles detection using LiDAR, camera, and proximity sensor</description>
  <maintainer email="teamc.c2022@gmail.com">teamc.c2022</maintainer>
  <license>TEAM C.C</license>

  <depend>rclpy</depend>

  <exec_depend>numpy</exec_depend>
  <exec_depend>interfaces</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>time</exec_depend>

  <build_depend>numpy</build_depend>
  <build_depend>interfaces</build_depend>
  <build_depend>sesnor_msgs</build_depend>
  <build_depend>time</build_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
