<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>proximity_sensor_pubsub</name>
  <version>0.0.0</version>
  <description>Using a proximity sensor it can get distance</description>
  <maintainer email="teamc.c2022@gmail.com">teamc.c2022</maintainer>
  <license>TeamC.C</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
