<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rplidar_detection</name>
  <version>1.0.0</version>
  <description>Rplidar's Obstacle Detection</description>
  <maintainer email="teamc.c2022@gmail.com">teamc.c2022</maintainer>
  <license>TEAM C.C</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
